# check-yo-self

./: .gitignore  1_construct_board.cpp  2_generate_legal_moves.cpp  3_search_moves.cpp  4_select_best_move.cpp  5_generate_output.cpp  CMakeLists.txt  README.md  attacks.cpp  chessbot  history.txt  make_move.cpp  move.h  move.txt  openings.cpp  out.txt  output.txt  play_match.py  t_table.h  test_castle_before.hist  zobrist_h.cpp  zobrist_h.h
include/: attacks.h  board.h  move.h  openings.h
src/: main.cpp
tests/: test_castling.txt  test_castling_blocked.txt  test_eval_black_advantage.txt  test_eval_white_advantage.txt  test_illegal.txt  test_promotion.txt
